fix wrong routes, add origin
