# api/swagger.yaml
@@ -426,8 +426,8 @@ paths:
       summary: set default list
       tags:
       - lists
-  /api/v1/lists/{list-id}/{item-id}:
-    patch:
+  /api/v1/lists/{list-id}/items/{item-id}:
+    post:
       consumes:
       - application/json
       description: Add item to list
@@ -471,8 +471,7 @@ paths:
       summary: Add item to list
       tags:
       - lists
-      - items
-  /api/v1/lists/{list-id}/{list-item-id}:
+  /api/v1/lists/{list-id}/items/{list-item-id}:
     delete:
       consumes:
       - application/json
@@ -512,7 +511,6 @@ paths:
       summary: Remove item from list
       tags:
       - lists
-      - items
     put:
       consumes:
       - application/json
@@ -563,7 +561,6 @@ paths:
       summary: Update list item
       tags:
       - lists
-      - items
   /api/v1/lists/default:
     get:
       consumes:
